--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,5 +1,7 @@
 
+ 
  nav {
+
   height: 5em;
   background: #9ACCD3;
   width: 100%;
@@ -19,7 +21,7 @@
 
   button {
       margin: 1em 0 0 1em ;
-      height: 3em;
+      height: 2em;
       width: 6em;
       color: #9ACCD3;
       border: 1px solid #000000;
@@ -36,5 +38,55 @@
       background: #ffffff;
   }
 
+  .glyphicon {
+      float: right;
+      color: red;
+      margin-top:4em;
+      // margin-right: 2em;
+
+  } 
+  
+  // .loginform {
+  //   display:none;
+
+  // }
+  .registrationform {
+    display:none;
+
+  }
+  .loginform, .registrationform {
+    float:right;
+    margin-top: 5em;
+    background: red;
+    width: 250px;
+    height: auto;
+
+    textarea {
+      width: 150px;
+    }
+
+    h4 {
+      font-family: inherit;
+    }
+    button {
+      height: 1.5em;
+
+    }
+
+ 
+  }
+
+
 
 }
+
+@media screen 
+// and (min-width: 0px)
+and (max-width: 742px) {
+
+  nav .loginform, .registrationform {
+    margin-top: 0;
+  
+    }
+   
+  }
