--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,33 @@
     <span class="header">DillyDally</span>
     <button>register</button>
     <button>login</button>
+      
+    <div><span class="glyphicon glyphicon-arrow-up"></span><div>
+
+    <div class="loginform">
+      <!-- action='/tweets' Method='POST' -->
+      <form action='/login' Method='POST'>
+        <h4>Username:</h4>
+        <textarea type="text" placeholder="username"></textarea>
+        <h4>Password:</h4>
+        <textarea type="text" placeholder="password"></textarea>
+        <button>submit</button>
+      </form>
+    </div>
+
+    <div class="registrationform">
+      <!-- action='/tweets' Method='POST' -->
+        <form action='/register' Method='POST'>
+          <h4>Username:</h4>
+          <textarea type="text" placeholder="username"></textarea>
+          <h4>Email:</h4>
+          <textarea type="text" placeholder="email"></textarea>
+          <h4>Password:</h4>
+          <textarea type="text" placeholder="password"></textarea>
+          <button>submit</button>
+        </form>
+      </div>
+
   </nav>
 
   <body>
@@ -41,24 +68,34 @@
         <span class="charError" >Meow has to many characters!</span> -->
         <input type="submit" value="submit">
       </form>
-   
+  <section class="itemList"> 
+
   <ul class="toeat">
       <h4>To Eat</h4>
       <li>Testing</li>
-
     </ul>
+
     <ul class="tobuy">
       <h4>To Buy</h4>
       <li>Testing</li>
     </ul>
+
     <ul class="towatch">
       <h4>To Watch</h4>
       <li>Testing</li>
     </ul>
+
     <ul class="toread">
       <h4>To Read</h4>
       <li>Testing</li>
     </ul> 
+
+  </section>
+
+ 
+
   </body>
+
+  <footer> </footer>
 </html>
 
