changed smart list classes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,22 +73,22 @@
       </form>
   <section class="itemList"> 
 
-  <ul class="toeat">
+  <ul class="foods">
       <h4>To Eat</h4>
       <li>Testing</li>
     </ul>
 
-    <ul class="tobuy">
+    <ul class="products">
       <h4>To Buy</h4>
       <li>Testing</li>
     </ul>
 
-    <ul class="towatch">
+    <ul class="movies">
       <h4>To Watch</h4>
       <li>Testing</li>
     </ul>
 
-    <ul class="toread">
+    <ul class="books">
       <h4>To Read</h4>
       <li>Testing</li>
     </ul> 
