--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -8,15 +8,29 @@ html {
   box-sizing: inherit;
 }
 
+.container {
+  margin: auto;
+  width: 80em;
+  height: auto;
+  background: #ffffff;
+
+  padding: 2em;
+}
+
+// .row {
+
+// }
+
 body {
   background-color: #EEE;
   font-family: $font-stack;
   margin-top: 10em; 
 
   form {
-    margin: 1em;
+   
     
     textarea {
+     
       float: center;
       width: 300px;
       height: 24px;
@@ -28,7 +42,7 @@ body {
   ul {
     width: 13em;
     height: auto;
-    background:white;
+    background:lightgrey;
     border: black 10px;
     float: left;
     padding: 0;
@@ -47,4 +61,6 @@ body {
     }
   }
 }
+
+
 
