--- a/styles/login_register.scss
+++ b/styles/login_register.scss
@@ -15,9 +15,10 @@
     // bottom: 0;
 
     margin-top: 5em;
+    padding: 1em;
     // margin-left: 5em;
     // margin-top: 3.65em;
-    background: red;
+    background: #9ACCD3;
     width: 250px;
     height: auto;
 
@@ -29,6 +30,7 @@
       font-family: inherit;
     }
     button {
+      float: right;
       height: 1.5em;
       margin-bottom: 1em;
     }
