created ajax reguest to database and have function sort data and append to matching list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,22 +77,22 @@
         
         
 
-        <ul class="foods">
+        <ul class="Food">
             <h4>To Eat</h4>
             <li>Testing</li>
           </ul>
 
-        <ul class="products">
+        <ul class="Product">
             <h4>To Buy</h4>
             <li>Testing</li>
           </ul>
 
-        <ul class="movies">
+        <ul class="Film">
             <h4>To Watch</h4>
             <li>Testing</li>
           </ul>
 
-        <ul class="books">
+        <ul class="Book">
             <h4>To Read</h4>
             <li>Testing</li>
           </ul> 
