--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -13,8 +13,8 @@ html {
   width: 80em;
   height: auto;
   background: #ffffff;
-
   padding: 2em;
+  border-radius: 10px;
 }
 
 // .row {
@@ -25,6 +25,7 @@ body {
   background-color: #EEE;
   font-family: $font-stack;
   margin-top: 10em; 
+  
 
   form {
    
@@ -50,6 +51,7 @@ body {
 
     li {
       margin-left: 2em;
+      
     }
 
     h4 {
