--- a/styles/login_register.scss
+++ b/styles/login_register.scss
@@ -11,15 +11,10 @@
 
   .loginform, .registerform {
     float: right;
-    // top: 0;
-    // bottom: 0;
-
     margin-top: 5em;
     padding: 1em;
-    // margin-left: 5em;
-    // margin-top: 3.65em;
     background: #9ACCD3;
-    width: 250px;
+    width: 175px;
     height: auto;
 
     textarea {
@@ -30,8 +25,8 @@
       font-family: inherit;
     }
     button {
-      float: right;
+   
+      margin: 0 0 1em 0;
       height: 1.5em;
-      margin-bottom: 1em;
     }
   }
