--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,47 +35,47 @@
           <!-- action='/tweets' Method='POST' -->
           <form action='/login' Method='POST'>
             <h4>Login:</h4>
-            <textarea type="text" placeholder="username"></textarea>
-            <textarea type="text" placeholder="password"></textarea>
+            <textarea type="text" placeholder="email" name="email"></textarea>
+            <textarea type="text" placeholder="password" name="password"></textarea>
             <button>submit</button>
           </form>
         </div>
-    
+
         <div class="registerform">
           <!-- action='/tweets' Method='POST' -->
             <form action='/register' Method='POST'>
               <h4>Register:</h4>
-              <textarea type="text" placeholder="username"></textarea>
-              <textarea type="text" placeholder="email"></textarea>
-              <textarea type="text" placeholder="password"></textarea>
+              <textarea type="text" placeholder="name" name="name"></textarea>
+              <textarea type="text" placeholder="email" name="email"></textarea>
+              <textarea type="text" placeholder="password" name="password"></textarea>
               <button>submit</button>
             </form>
           </div>
-       
-    
+
+
     <!-- <span class="glyphicon glyphicon-tasks"> -->
 
-      
+
     <!-- <div><span class="glyphicon glyphicon-arrow-up"></span><div> -->
 
   </nav>
 
   <body>
-   
-  
-  <section class="itemList"> 
+
+
+  <section class="itemList">
 <div class="container">
   <div class="row">
 
 
-          <form class="w-100" action='/todo/new' Method='POST'> 
+          <form class="w-100" action='/todo/new' Method='POST'>
             <textarea name="text" placeholder="What were you recommnded?"></textarea>
             <!-- <span class="emptyError">Please type !</span>
             <span class="charError" >Meow has to many characters!</span> -->
             <button>submit</button>
           </form>
-        
-        
+
+
 
         <ul class="Food">
             <h4>To Eat</h4>
@@ -89,13 +89,13 @@
 
         <ul class="Film">
             <h4>To Watch</h4>
-      
+
           </ul>
 
         <ul class="Book">
             <h4>To Read</h4>
-        
-          </ul> 
+
+          </ul>
 
 
     </div>
@@ -104,7 +104,7 @@
 
   </section>
 
- 
+
 
   </body>
 
