--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -55,7 +55,7 @@
 @media screen 
 and (max-width: 742px) {
 
-  nav .loginform, .registerform {
+  nav .loginform, .registerform .edituserform{
     margin-top: 5em;
   
     }
