--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,48 +34,48 @@
         <div class="loginform">
           <form action='/login' Method='POST'>
             <h4>Login:</h4>
-            <textarea type="text" placeholder="email" name="email"></textarea>
-            <textarea type="text" placeholder="password" name="password"></textarea>
+            <textarea type="text" name='email' placeholder="email"></textarea>
+            <input type="password" name='password' placeholder="password">
+            <button>submit</button>
+          </form>
+        </div>
+        <div class="registerform">
+          <form action='/register' Method='POST'>
+            <h4>Register:</h4>
+            <textarea type="text" name='name' placeholder="username"></textarea>
+            <textarea type="text" name='email' placeholder="email"></textarea>
+            <input type="password" name='password'placeholder="password">
             <button>submit</button>
           </form>
         </div>
 
-        <div class="registerform">
-          <!-- action='/tweets' Method='POST' -->
-            <form action='/register' Method='POST'>
-              <h4>Register:</h4>
-              <textarea type="text" placeholder="name" name="name"></textarea>
-              <textarea type="text" placeholder="email" name="email"></textarea>
-              <textarea type="text" placeholder="password" name="password"></textarea>
+         <button class='logoutbutton'>logout</button>
+          <button class="edituserbutton">edit user</button>
+
+          <div class="edituserform">
+            <form action='/:user/edit' Method='POST'>
+              <h4>Edit User:</h4>
+              <textarea type="text" placeholder="new email"></textarea>
+              <input type="password" placeholder="new password">
               <button>submit</button>
             </form>
           </div>
-
-
-    <!-- <span class="glyphicon glyphicon-tasks"> -->
-
-
-    <!-- <div><span class="glyphicon glyphicon-arrow-up"></span><div> -->
 
   </nav>
 
   <body>
 
-
-  <section class="itemList">
-<div class="container">
-  <div class="row">
-
         
         <div class="container">
           <div class="row">
 
-          <form class="w-100" action='/todo/new' Method='POST'>
+          <section class="itemList"> 
+          <form class="w-100" action='/todo/new' Method='POST'> 
             <textarea name="text" placeholder="What were you recommnded?"></textarea>
             <button>submit</button>
           </form>
-
-
+         <div> <span class="emptyError">Please type a recommendation!</span> </div>
+        
 
         <ul class="Food">
             <h4>To Eat</h4>
@@ -89,13 +89,13 @@
 
         <ul class="Film">
             <h4>To Watch</h4>
-
+      
           </ul>
 
         <ul class="Book">
             <h4>To Read</h4>
-
-          </ul>
+        
+          </ul> 
 
 
     </div>
@@ -104,7 +104,7 @@
 
   </section>
 
-
+ 
 
   </body>
 
