--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,8 @@
 
   <nav>
       <span class="header">DillyDally</span>
+
+      <%= locals.user %>
         <button class="registerbutton">register</button>
         <button class="loginbutton">login</button>
 
