changed layout a bunch looking cute

--- a/styles/login_register.scss
+++ b/styles/login_register.scss
@@ -3,7 +3,7 @@
     float: right;
     margin-top: 5em;
     padding: 1em;
-    background: #9ACCD3;
+    background: #82CFE3;
     width: 175px;
     height: auto;
     display: none;
