--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -3,19 +3,40 @@ $primary-color:  #244751;
 
 html {
   box-sizing: border-box;
+  background: #ffffff;;
 }
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
+.loginplease {
+top: 6em;
+color: $primary-color;
+font-family: $font-stack;
+display:inline;
+}
+.splash {
+height: 60em;
+padding: 6em 0 13em 0;
+
+}
+
+.banner {
+  width:100%;
+  position: fixed;
+  top: 5em;
+  bottom: 0;
+  z-index: 1;
+}
+
 .itemList {
 
-  margin-top: 8em;
+  margin-top: 20em;
   margin-left:auto;
   margin-right:auto;
   width: auto;
   height: auto;
-  background: #ffffff;
+  background: #F1FCFE;
   padding: 2em;
   border-radius: 10px;
 }
@@ -28,8 +49,10 @@ margin-right:3px;
 
 }
 
+
 body {
-  background-color: #EEE;
+
+
   font-family: $font-stack;
   margin-top: 10em; 
   margin-bottom: 10em;
