splash page completed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,12 @@
           </form>
         </div>
       </nav>
-        <body><h1 class="loginplease">Please Login to see you recommendations</p> <img class="splash" src="/images/splash.png"> </body>
+        <body>
+            <div class="container">
+                <div class="row">
+                  <div class="col"><h1 >Please Login to <br> see your <br> recommendations</h1></div>
+                  <div class="col"><img class="splash" src="/images/splash.png"> </body></div>
+                </div> 
 
         <% } else { %>
           <nav>
