--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -9,15 +9,18 @@ html {
   box-sizing: inherit;
 }
 
-.loginplease {
-top: 6em;
+h1 {
 color: $primary-color;
 font-family: $font-stack;
-display:inline;
+margin-top: 7em;
+font-size: 250%;
+left:0;
+right:0 ;
 }
+
 .splash {
 height: 60em;
-padding: 6em 0 13em 0;
+padding: 5em 0 13em 0;
 
 }
 
@@ -36,7 +39,7 @@ padding: 6em 0 13em 0;
   margin-right:auto;
   width: auto;
   height: auto;
-  background: #F1FCFE;
+  background: #ffffff;
   padding: 2em;
   border-radius: 10px;
 }
@@ -54,7 +57,7 @@ body {
 
 
   font-family: $font-stack;
-  margin-top: 10em; 
+  margin-top: 15em; 
   margin-bottom: 10em;
   
 
@@ -65,15 +68,26 @@ body {
       float: center;
       margin-top: .1em;
       width: 300px;
-      height: 24px;
+      height: 25px;
       resize: none;
       margin-bottom: 1em;
   }
 
   button {
     margin: 0 0 0 1em;
+    height: 2em;
+    width: 6em;
     float: none;
+    color: #9ACCD3;
+    background: #EBFAFD;
+    border: 1px solid #000000;
+    font-family: inherit;
+    font-size: 1em;
+    border-radius: 10px;
   }
+  button:hover {
+    background: #ffffff;
+}
 }
 .emptyError {
   display: none;
@@ -91,6 +105,7 @@ body {
 
     li {
       margin-left: 2em;
+      margin-top: .5em;
       
     }
 
