--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
         <body>
             <div class="container">
                 <div class="row">
-                  <div class="col"><h1 >Please Login to <br> see your <br> recommendations</h1></div>
+                  <div class="col"><h1 >Please Login <br> to see your <br> recommendations</h1></div>
                   <div class="col"><img class="splash" src="/images/splash.png"> </body></div>
                 </div> 
 
@@ -88,39 +88,40 @@
     </form>
    <div> <span class="emptyError">Please type a recommendation!</span> </div>
   
-   <div class="popup-content">
+  <div class="popup-content">
       <h4>Edit Catagory</h4>
       <form class="editcategory" method='POST' action='/todo/:id/edit' >
+        
 
       </form>
-  
-      <button class="close">Close</button>    
+      <button class="close">Close</button>  
+   
   </div>
   
 
   <div class="row">
 
-
+      <div class="col-sm-2">
       <ul class="Food">
           <h4>To Eat</h4>
-
+        </div>
         </ul>
-
+        <div class="col-sm-2">
       <ul class="Product">
           <h4>To Buy</h4>
-
+        </div>
         </ul>
-
+        <div class="col-sm-2">
       <ul class="Film">
           <h4>To Watch</h4>
-    
+        </div>
         </ul>
-
+        <div class="col-sm-2">
       <ul class="Book">
           <h4>To Read</h4>
       
         </ul> 
-       
+      </div>
 
   </div>
 </div>
