edit and delete buttons functioning correctly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,16 +88,16 @@
     </form>
    <div> <span class="emptyError">Please type a recommendation!</span> </div>
   
-  <div class="popup-content">
+  <section class="popup-content">
       <h4>Edit Catagory</h4>
       <form class="editcategory" method='POST' action='/todo/:id/edit' >
         
 
-      </form>
+      </form> 
       <button class="close">Close</button>  
    
-  </div>
-  
+    </section>
+
 
   <div class="row">
 
