added social media buttons with hover

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -15,6 +15,15 @@
   left: 0;
 }
 
+.fa {
+float:right;
+margin-top: .3em;
+padding-right: 1em;
+}
+.fa:hover {
+color: #ffffff
+}
+
 footer {
 
   height: 2em;
