--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
 
     <!-- External CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Externla CSS-->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
@@ -64,27 +65,27 @@
           <nav>
               <img class="logo" src="/images/logo.png">   
               <span class="header">DillyDally</span>
-        <form class="logoutform" method='POST' action='/logout' >
-          <button type='submit' name='logout'>logout</button></form>
-          <button class="edituserbutton">edit user</button>
+              <form class="logoutform" method='POST' action='/logout' >
+                <button type='submit' name='logout'>logout</button></form>
+                <button class="edituserbutton">edit user</button>
 
-          <div class="edituserform">
-              <form action='/users/<%= user.id %>/edit' Method='POST'>
-              <h4>Edit User:</h4>
-              <textarea type="text" placeholder="new email" name="email"></textarea>
-              <input type="password" placeholder="new password" name="password">
-              <button>submit</button>
-            </form>
-          </div>
+                <div class="edituserform">
+                    <form action='/users/<%= user.id %>/edit' Method='POST'>
+                    <h4>Edit User:</h4>
+                    <textarea type="text" placeholder="new email" name="email"></textarea>
+                    <input type="password" placeholder="new password" name="password">
+                    <button>submit</button>
+                  </form>
+                </div>
         
   </nav>
  
   <body>
   <section class="itemList"> 
       <div class="loggedin"> Welcome, <%= user.name %></div>
-    <form class="w-100" action='/todo/new' Method='POST'> 
-      <textarea name="text" placeholder="What were you recommnded?"></textarea>
-      <button>submit</button>
+      <form class="w-100" action='/todo/new' Method='POST'> 
+        <textarea name="text" placeholder="What were you recommnded?"></textarea>
+        <button>submit</button>
     </form>
    <div> <span class="emptyError">Please type a recommendation!</span> </div>
   
@@ -127,8 +128,16 @@
 </div>
 </body>
 <% } %>
+
 <img class="footerimg" src="/images/footer.png" >   
-<footer> </footer>
+
+<footer>
+  <a class="fb-ic mr-3"><i class="fa fa-lg fa-facebook"> </i></a>
+  <a class="ins-ic mr-3"><i class="fa fa-lg fa-instagram"> </i></a>
+  <a class="pin-ic mr-3"><i class="fa fa-lg fa-pinterest"> </i></a>
+  <a class="tw-ic mr-3"><i class="fa fa-lg fa-twitter"></i> </a>
+  <a class="reddit-ic"><i class="fa fa-lg fa-reddit-alien"> </i></a> 
+   </footer>
 
 
 
