fixed multiple edit tabs bug, added name of item being change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,19 +88,23 @@
         <button>submit</button>
     </form>
    <div> <span class="emptyError">Please type a recommendation!</span> </div>
-  
-  <section class="popup-content">
-      <h4>Edit Catagory</h4>
-      <form class="editcategory" method='POST' action='/todo/:id/edit' >
-        
+   <div class="row">
 
-      </form> 
-      <button class="close">Close</button>  
-   
+      <div class="col">
+      <section class="popup-content">
+      <h4>Edit Category For: </h4> <h5 class='itemname'></h5>
+      <form class="editcategory" method='POST' action='/todo/:id/edit' >
+
+
+ 
+    </form> 
+    <button class="close">Close</button>
+  </div>
+  </div>
     </section>
 
 
-  <div class="row">
+  <div class="row2">
 
       <div class="col-sm-2">
       <ul class="Food">
