--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -23,10 +23,11 @@ height: 60em;
 padding: 5em 0 13em 0;
 
 }
-.col-sm {
-width: 33%
 
+.col {
+width: 100%;
 }
+
 .banner {
   width:100%;
   position: fixed;
