--- a/styles/login_register.scss
+++ b/styles/login_register.scss
@@ -3,19 +3,36 @@ $font-stack:     'Fugaz One', cursive;
 .loggedin {
 font-size:200%;
 }
+
+.itemname {
+  font-family: $font-stack;
+}
   .popup-content {
     font-family: $font-stack;
-    width: 35em;
+    font-size: 100%;
+    width: auto;
+    float: left;
+    border-radius: 10px;
+    padding: .5em;
 
   h4 {
     font-family: inherit;
 
   }
     button {
-      margin: .5em
+      margin: .5em;
     }
 
   }
+
+  .close {
+    font-size: 100%;
+  }
+
+  .col-sm {
+    width: 33%;
+
+    }
   
   .loginform, .registerform, .edituserform {
     float: right;
