function for item to user id added, prepped for error message on loggin

--- a/styles/login_register.scss
+++ b/styles/login_register.scss
@@ -1,5 +1,13 @@
 $font-stack:     'Fugaz One', cursive;
 
+.errormsg {
+
+  font-size: 90%;
+  display:none;
+
+}
+
+
 .loggedin {
 font-size:200%;
 }
