--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,7 @@
             <h4>Login:</h4>
             <textarea type="text" name='email' placeholder="email"></textarea>
             <input type="password" name='password' placeholder="password">
+            <span class="errormsg">Credtials Incorrect: <br> Try Again </span>
             <button>submit</button>
           </form>
         </div>
