final touches updated readme

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,22 +109,22 @@
 
       <div class="col-sm-2">
       <ul class="Food">
-          <h4>To Eat</h4>
+          <h4>Foods</h4>
         </div>
         </ul>
         <div class="col-sm-2">
       <ul class="Product">
-          <h4>To Buy</h4>
+          <h4>Products</h4>
         </div>
         </ul>
         <div class="col-sm-2">
       <ul class="Film">
-          <h4>To Watch</h4>
+          <h4>Films</h4>
         </div>
         </ul>
         <div class="col-sm-2">
       <ul class="Book">
-          <h4>To Read</h4>
+          <h4>Books</h4>
 
         </ul>
       </div>
