Final changes to server.js for organization

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,6 @@
             <h4>Login:</h4>
             <textarea type="text" name='email' placeholder="email"></textarea>
             <input type="password" name='password' placeholder="password">
-            <span class="errormsg">Credtials Incorrect: <br> Try Again </span>
             <button>submit</button>
           </form>
         </div>
@@ -89,23 +88,19 @@
         <button>submit</button>
     </form>
    <div> <span class="emptyError">Please type a recommendation!</span> </div>
-   <div class="row">
 
-      <div class="col">
-      <section class="popup-content">
-      <h4>Edit Category For: </h4> <h5 class='itemname'></h5>
+  <section class="popup-content">
+      <h4>Edit Catagory</h4>
       <form class="editcategory" method='POST' action='/todo/:id/edit' >
 
 
- 
-    </form> 
-    <button class="close">Close</button>
-  </div>
-  </div>
+      </form>
+      <button class="close">Close</button>
+
     </section>
 
 
-  <div class="row2">
+  <div class="row">
 
       <div class="col-sm-2">
       <ul class="Food">
